Bloc-note avec sauvegarde fonctionnel

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -27,7 +27,9 @@
                 hidden
             >
                 <h2>Bloc notes</h2>
-                <p>Ici, vous pouvez prendre des notes.</p>
+                <div id="test">
+                    <textarea name="Notepad" id="bloc-note" placeholder="Commencez à entrez vos notes"></textarea>
+                </div>
             </section>
 
             <section
