--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -27,8 +27,12 @@
                 hidden
             >
                 <h2>Bloc notes</h2>
-                <div id="test">
-                    <textarea name="Notepad" id="bloc-note" placeholder="Commencez à entrez vos notes"></textarea>
+                <div id="bloc-note-container">
+                    <textarea
+                        name="Notepad"
+                        id="bloc-note"
+                        placeholder="Commencez à entrez vos notes"
+                    ></textarea>
                 </div>
             </section>
 
