--- a/src/HTML/popup.html
+++ b/src/HTML/popup.html
@@ -99,7 +99,7 @@
                 </button>
             </nav>
         </footer>
-        <script src="../JS/popup.js"></script>
+        <script src="../JS/blocNote.js"></script>
         <script src="../JS/toDoList.js"></script>
     </body>
 </html>
